--- a/client/scss/layouts/about.module.scss
+++ b/client/scss/layouts/about.module.scss
@@ -7,20 +7,20 @@
 }
 
 .title {
-    font-size: 2.8rem;
+    font-size: 3rem;
     margin: 0;
     margin-bottom: 1rem;
-    font-weight: 600
+    font-weight: 700;
 }
 
 .subtitle {
     font-size: 1.7rem;
     margin: 0;
-    font-weight: 600
+    font-weight: 600;
 }
 
 .para {
-    margin-top: .5rem;
+    margin-top: 0.5rem;
     line-height: 1.6rem;
     font-size: 1.2rem;
     margin-bottom: 3rem;
@@ -39,6 +39,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items:flex-start;
+    align-items: flex-start;
     margin: 3rem auto;
 }
+
