--- a/client/scss/layouts/blog.module.scss
+++ b/client/scss/layouts/blog.module.scss
@@ -2,7 +2,9 @@
     display: flex;
     flex-direction: column;
     width: fit-content;
-    margin: 3rem auto;
+    margin: 0 auto;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
     padding: 0 1.5rem;
 }
 
@@ -10,6 +12,8 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+    gap: 2rem;
+    margin-top: 1rem;
     margin-bottom: 2rem;
     @media screen and (min-width: 800px) {
         grid-template-columns: repeat(2, 1fr);
@@ -28,7 +32,9 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+    margin-top: 1rem;
     margin-bottom: 2rem;
+    gap: 2rem;
     @media screen and (min-width: 800px) {
         grid-template-columns: repeat(2, 1fr);
     }
@@ -43,5 +49,6 @@
 }
 
 .title {
+    font-size: 2rem;
     margin-bottom: 0;
 }
