--- a/client/scss/layouts/store.module.scss
+++ b/client/scss/layouts/store.module.scss
@@ -3,7 +3,7 @@
 
 .store {
     display: flex;
-    @media screen and (max-width: 1200px) {
+    @media screen and (max-width: 1300px) {
         justify-content: center;
     }
 }
@@ -12,12 +12,13 @@
     display: flex;
     flex-direction: column;
     padding: 0 2rem;
+    margin-bottom: 5rem;
     max-width: 70rem;
 }
 
 .filterCol {
-    @media screen and (min-width: 1200px) {
-        width: 25%;
+    @media screen and (min-width: 1300px) {
+        width: 317px;
     }
 }
 
@@ -34,7 +35,7 @@
     display: none;
     flex-direction: column;
     gap: 1rem;
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1300px) {
         display: flex !important;
     }
     h3 {
@@ -52,7 +53,7 @@
     align-items: center;
     justify-content: center;
     @include font-size(2rem);
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1300px) {
         display: none !important;
     }
     position: fixed;
@@ -70,7 +71,7 @@
         margin: 0;
         margin-bottom: 0.2rem;
         padding: 0;
-        @media screen and (min-width: 1200px) {
+        @media screen and (min-width: 1300px) {
             margin-bottom: 0.8rem;
         }
     }
@@ -81,11 +82,11 @@
     flex-direction: column;
     margin-top: 0rem;
     margin: 0 1rem;
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1300px) {
         margin-top: 1rem;
     }
     div {
-        @media screen and (min-width: 1200px) {
+        @media screen and (min-width: 1300px) {
             margin-bottom: 0.7rem;
         }
         margin-bottom: 0.3rem;
@@ -99,7 +100,7 @@
     display: flex;
     flex-direction: row;
     max-width: 70rem;
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: 1000px) {
         flex-direction: column;
     }
     gap: 1.5rem;
@@ -108,15 +109,15 @@
 .bookGrid {
     margin: 2rem auto;
     display: grid;
-    justify-content: center;
+    justify-content: flex-start;
     grid-template-columns: repeat(1, 1fr);
-    @media screen and (min-width: 625px) {
+    @media screen and (min-width: 680px) {
         grid-template-columns: repeat(2, 1fr);
     }
-    @media screen and (min-width: 900px) {
+    @media screen and (min-width: 1000px) {
         grid-template-columns: repeat(3, 1fr);
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1300px) {
         grid-template-columns: repeat(3, 1fr);
     }
     @media screen and (min-width: 1600px) {
@@ -160,7 +161,7 @@
 .button {
     max-width: 40rem;
     display: none;
-    @media screen and (max-width: 1200px) {
+    @media screen and (max-width: 1300px) {
         display: block;
     }
 }
@@ -173,7 +174,7 @@
     padding-top: 7rem;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    @media screen and (min-width: 625px) {
+    @media screen and (min-width: 680px) {
         grid-template-columns: repeat(2, 1fr);
     }
     gap: 2rem;
